--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ go:
 
 install:
  - export PATH=$HOME/gopath/bin:$PATH
+ - go get -v code.google.com/p/go.tools/cmd/cover
  - go get -v github.com/axw/gocov
  - go install github.com/axw/gocov/gocov
  - go get -v -d ./...
