--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,13 @@ go:
  - 1.1
  - 1.2.1
  - tip
+
+install:
+ - go get code.google.com/p/go.tools/cmd/cover
+ - go get github.com/mattn/goveralls
+
+script:
+ - go test -v ./...
+ - go test -covermode=count -coverprofile=profile.cov
+ - goveralls -coverprofile=profile.cov -service=travis-ci
+ 
