--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: go
 go:
- - 1.1
+ - 1.2
  - 1.2.1
  - tip
 
 install:
+ - export PATH=$HOME/gopath/bin:$PATH
  - go get code.google.com/p/go.tools/cmd/cover
  - go get github.com/mattn/goveralls
 
